--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix "
   }
 }
